tests/NormalTests/paczka1/fuzzy1/23468667.err
Error in line 9: x2nZPaY3 A184 41,4
Error in line 13: O1cLl S764 89,9
Error in line 19: O1cLl A184 38,5
Error in line 27: x2nZPaY3mS963m235,7
Error in line 23: x2nZPaY3 S963 64,4
